overlays/kuberay-rbac/install.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kuberay
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      ray.io/is-ray-node: 'yes'
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/kubeflow/sa/kuberay-operator
---
# this seems to be unnecessary for workspace -> ray service
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: raycluster-editor
#   namespace: kubeflow-user-example-com
# spec:
#   action: ALLOW
#   rules:
#     - from:
#         - source:
#             principals:
#               - cluster.local/ns/kubeflow-user-example-com/sa/default-editor
#   selector:
#     matchLabels:
#       ray.io/is-ray-node: 'yes'
